Финальный коммит: сделано запоминание фильтров пользователя
